feat: Add Open Graph social preview image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NEXUS | Loja Gamer</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://robsonmarcolino.github.io/Nexus-store/" />
+    <meta property="og:title" content="NEXUS | Loja Gamer" />
+    <meta property="og:description" content="A melhor loja de equipamentos gamer de alta performance." />
+    <meta property="og:image" content="/Nexus-store/GamerNavBar.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://robsonmarcolino.github.io/Nexus-store/" />
+    <meta property="twitter:title" content="NEXUS | Loja Gamer" />
+    <meta property="twitter:description" content="A melhor loja de equipamentos gamer de alta performance." />
+    <meta property="twitter:image" content="/Nexus-store/GamerNavBar.png" />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
